--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "*",
     "zksync-web3": "^0.9.0"
   }
 }
